--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -2288,7 +2288,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_hb_simd_pop_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("1 - Most Deprived", false);
+  [0].selectize.setValue("All", false);
 
   document.getElementById("filter_hb_simd_pop_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2300,7 +2300,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("1 - Most Deprived", false);
+  [0].selectize.setValue("All", false);
 
   document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2318,7 +2318,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("1 - Most Deprived", false);
+  [0].selectize.setValue("All", false);
 
   document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2330,7 +2330,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_ijb_simd_ldp_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("1 - Most Deprived", false);
+  [0].selectize.setValue("All", false);
 
   document.getElementById("filter_ijb_simd_ldp_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
