--- a/management-report/markdown/subpage-pathways.Rmd
+++ b/management-report/markdown/subpage-pathways.Rmd
@@ -263,7 +263,8 @@ plot_bar_median(median_data_ijb_table))
 median_ijb_table_data <- wait_data %>% 
       filter(sex == "All") %>% 
      filter(ijb != "All", simd == "All") %>% 
-      select(ijb, fy, total_referrals, perc_contacted, median_diagnosis_to_contact) %>% 
+      select(ijb, fy, total_referrals, perc_contacted, median_diagnosis_to_contact) %>%
+   mutate(median_diagnosis_to_contact = if_else(median_diagnosis_to_contact < 0, "-", as.character(median_diagnosis_to_contact))) %>% 
   mutate(across(starts_with("perc"), ~ paste0(.,"%"))) %>%
     mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>%
       mutate(ijb = if_else(ijb == "Scotland", "AAA", ijb)) %>%
@@ -271,7 +272,8 @@ median_ijb_table_data <- wait_data %>%
       mutate(ijb = if_else(ijb == "AAA", "Scotland", ijb)) %>% 
     mutate(median_diagnosis_to_contact = if_else(ijb == "Aberdeen City" & fy %in% c("2019/20", "2020/21"), "-", median_diagnosis_to_contact)) %>% 
     mutate(perc_contacted = if_else(ijb == "Aberdeen City" & fy %in% c("2019/20", "2020/21"), "-", perc_contacted)) %>%
-  rename(`Number of People Referred to PDS` = total_referrals, 
+  mutate(median_diagnosis_to_contact = if_else(median_diagnosis_to_contact == "  NA", "-", median_diagnosis_to_contact)) %>% 
+    rename(`Number of People Referred to PDS` = total_referrals, 
          `% of Referrals contacted by PDS practitioner` = perc_contacted,
         `Average (median) days from diagnosis to first contact` = median_diagnosis_to_contact) %>% 
   #pivot_longer(!c(ijb,fy), names_to = "measure", values_to = "n") %>% 
@@ -284,6 +286,9 @@ median_ijb_table <- SharedData$new(median_ijb_table_data, key = ~fy, group = "me
 bscols(widths = 12,
        div(style = css(width="97%", height="460px", margin="20px"),
 DT::datatable(median_ijb_table, rownames = FALSE, extensions = "FixedColumns",
+               caption = htmltools::tags$caption(
+                       style = 'caption-side: bottom; text-align: left;',
+                       "A dash (-) indicates that this measure could not be calculated due to data quality issues."),
               options = list(pageLength = 33,
                              scrollX = TRUE,
                              fixedColumns = list(leftColumns = 1),
@@ -350,6 +355,7 @@ median_hb_table_data <- wait_data %>%
       filter(sex == "All") %>% 
      filter(ijb == "All" | ijb == "Scotland", simd == "All") %>% 
       select(health_board, fy, total_referrals, perc_contacted, median_diagnosis_to_contact) %>% 
+    mutate(median_diagnosis_to_contact = if_else(median_diagnosis_to_contact < 0, "-", as.character(median_diagnosis_to_contact))) %>% 
   mutate(across(starts_with("perc"), ~ paste0(.,"%"))) %>%
     mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>%
         mutate(median_diagnosis_to_contact = if_else(health_board == "NHS Grampian" & fy %in% c("2019/20", "2020/21"), "-", median_diagnosis_to_contact)) %>% 
@@ -367,6 +373,9 @@ median_hb_table <- SharedData$new(median_hb_table_data, key = ~fy, group = "medi
 bscols(widths = 12,
        div(style = css(width="97%", height="470px", margin="20px"),
 DT::datatable(median_hb_table, rownames = FALSE, extensions = "FixedColumns",
+              caption = htmltools::tags$caption(
+                       style = 'caption-side: bottom; text-align: left;',
+                       "A dash (-) indicates that due to data quality issues this measure could not be calculated."),
               options = list(pageLength = 15,
                              scrollX = TRUE,
                              fixedColumns = list(leftColumns = 1),
@@ -423,22 +432,45 @@ wait_plot_trend)
 ```
 
 ```{r table-wait-trend}
-
+wait_data_trend_table <-
 wait_data_trend_all %>% arrange(geog) %>% 
-            mutate(median_diagnosis_to_contact = as.character(median_diagnosis_to_contact)) %>% 
+              mutate(median_diagnosis_to_contact = if_else(median_diagnosis_to_contact < 0, "-", as.character(median_diagnosis_to_contact))) %>% 
             mutate(median_diagnosis_to_contact = 
-              if_else(geog == "Aberdeen City" & fy %in% c("2019/20", "2020/21"), "\\-", median_diagnosis_to_contact)) %>% 
+              if_else(geog == "Aberdeen City" & fy %in% c("2019/20", "2020/21"), "-", median_diagnosis_to_contact)) %>% 
             mutate(median_diagnosis_to_contact = 
-              if_else(geog == "NHS Grampian" & fy %in% c("2019/20", "2020/21"), "\\-", median_diagnosis_to_contact)) %>%             pivot_wider(names_from = fy, values_from = median_diagnosis_to_contact) %>%
-            rename(`Integration Authority Area/Health Board` = geog) %>%
-            kable(align = c("l", rep("r", length(all_years)))) %>%
-            kable_styling(full_width = TRUE) %>%
-            column_spec(1, bold = TRUE) %>%
+              if_else(geog == "NHS Grampian" & fy %in% c("2019/20", "2020/21"), "-", median_diagnosis_to_contact)) %>%           
+  pivot_wider(names_from = fy, values_from = median_diagnosis_to_contact) %>%
+            rename(`Integration Authority Area/Health Board` = geog)# %>%
+            #kable(align = c("l", rep("r", length(all_years)))) %>%
+            #kable_styling(full_width = TRUE) %>%
+            #column_spec(1, bold = TRUE) %>%
   # Add header above table
-            add_header_above(
-                    c(" " = 1,
-                     "Financial Year of Diagnosis" = length(all_years))) %>%
-            scroll_box(height = "470px")
+            #add_header_above(
+                   # c(" " = 1,
+                 #    "Financial Year of Diagnosis" = length(all_years))) %>%
+  # add_footnote(label = "A dash (\\-) indicates that this measure could not be calculated due to data quality issues.") %>% 
+           # scroll_box(height = "470px")
+
+
+bscols(widths = 12,
+       div(style = css(width="97%", height="470px", margin="20px"),
+    DT::datatable(wait_data_trend_table, rownames = FALSE,  
+                                       caption = htmltools::tags$caption(
+                       style = 'caption-side: bottom; text-align: left;',
+                       "A dash (-) indicates that due to data quality issues this measure could not be calculated."),
+                       options = list(pageLength = 46,
+                             scrollX = FALSE,
+                             scrollY = TRUE,
+                             dom = "t",
+                             ordering = FALSE,
+                             columnDefs = list(list(className = 'dt-right', 
+                                                    targets = 2:length(all_years))
+                                                ))) %>%
+           DT::formatStyle(1, fontWeight = "bold",
+                           )
+        )
+     )
+
 
 ```
 
@@ -453,8 +485,8 @@ wait_data_all <- wait_data %>%
              perc_allocated, median_referral_to_allocation,
              perc_contacted, median_allocation_to_contact,
              median_diagnosis_to_contact) %>% 
-  mutate(across(starts_with("perc"), ~ paste0(.,"%"))) %>%
-  mutate(across(starts_with("median"), ~ replace(., is.na(.), "-"))) %>% 
+   mutate(across(starts_with("perc"), ~ paste0(.,"%"))) %>%
+  mutate(across(starts_with("median"), ~ replace(., is.na(.) | .<0, "-"))) %>% 
         mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
     mutate(across(starts_with("perc"),
                   ~if_else(geog == "Aberdeen City" & fy %in% c("2019/20", "2020/21"), "-", .))) %>%
@@ -494,9 +526,9 @@ data_filter_all_year, NULL)
 bscols(widths = 12,
        div(style = css(width="97%", height="785px", margin="20px"),
     DT::datatable(wait_table_data_all, rownames = FALSE,  
-                                        caption = htmltools::tags$caption(
+                                       caption = htmltools::tags$caption(
                        style = 'caption-side: bottom; text-align: left;',
-                       "A dash (-) indicates insufficient data for this measure to be calculated."),
+                       "A dash (-) indicates that due to data quality issues this measure could not be calculated."),
                        options = list(pageLength = 46,
                              scrollX = FALSE,
                              scrollY = TRUE,
@@ -590,8 +622,8 @@ not_met_data <- pds_all %>% filter(ldp == "fail") %>% group_by(geog, fy, ldp_ful
 
 not_met_data_totals <- left_join(pds_all_totals %>% 
                                select(-age_grp_2), not_met_data) %>% 
-    #mutate(`% of Total referrals Standard Not Met` = paste0(round(100*total/total_referrals,1), "%"),
-                                          #    .after = total_referrals) %>% 
+    mutate(`% of Total referrals Standard Not Met` = paste0(round(100*total/total_referrals,1), "%"),
+                                              .after = total_referrals) %>% 
   rename(`Integration Authority Area/Health Board` = geog, 
          `Total referrals` = total_referrals,
          `Standard Not Met` = total) %>% mutate(across(where(is.numeric), ~format(., big.mark = ","))) 
@@ -626,7 +658,7 @@ bscols(widths = 12,
                              dom = "t",
                              ordering = FALSE,
                              columnDefs = list(list(visible = FALSE, targets = 1),
-                                                list(className = 'dt-right', targets = 2:7)
+                                                list(className = 'dt-right', targets = 2:8)
                                                 #list(width = '10px', targets = 1:10)
                                                 ))) %>%
            DT::formatStyle(1, fontWeight = "bold"#, padding = "4px"
