--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -536,7 +536,7 @@ headers_ytbd <- htmltools::withTags(table(
   thead(
     tr(
       th(colspan = 1, '    '),
-      th(rowspan = 2, "Integration Authority Area/Health Board/"),
+      th(rowspan = 2, "Integration Authority Area/Health Board"),
       th(colspan = 3, '    2016/17'),
       th(colspan = 3, '    2017/18'),
       th(colspan = 3, '    2018/19'),
